# siapwa

./: README.md  package.xml  setup.cfg  setup.py
jetracer/nodes/control/: vehicle_go.py  vehicle_go_continuous.py
jetracer/nodes/control/manual/: vehicle_go_manual.py
jetracer/nodes/control/mpc/: mpc_bicycle_new.py  mpc_bicycle_old.py
jetracer/nodes/control/pid/: pid.py
jetracer/nodes/nodes/: check_collision.py  make_gt.py  management_move (copy).py  management_move.py  management_move_mpc.py  management_move_old.py  management_move_pid.py  original.py  publish_image.py  publish_image_binary.py
jetracer/nodes/perception/obstacle_avoiddance/: obstacle_avoidance_decider.py
jetracer/nodes/perception/splain_tracking/: get_depth_image.py  get_error.py  get_main_lines.py  get_splain_from_lines.py  main_line_preprocessing.py  make_splain.py  save_depth_image_gt.py
jetracer/nodes/perception/vision/: camera.py  image_preprocessing.py  shop_view.py  transform.py
jetracer/nodes/qlearning/: __init__.py  awarding_prizes.py  inference.py  learning_management.py  position_progressor.py  preprocess_sensor.py  set_action.py  state_loader.py
jetracer/nodes/qlearning/results/: show_results.ipynb
jetracer/nodes/qlearning/train_process/: Mmemory.py  q_network.py  train_method.py
jetracer/nodes/sensors/: get_odometry.py
launch/: jetracer.launch.py
models/: camera.sdf
worlds/Trapezoid/models/: Trapezoid_model.sdf
worlds/Trapezoid/worlds/: Trapezoid.world
worlds/city_for_car/: instruciotn.txt  world.sdf
worlds/city_for_car/models/house_1/: model.sdf
(+10 files in other folders)
