<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetracer</name>
  <version>0.2.0</version>
  <description>Jetracer autonomous driving</description>
  <maintainer email="todo@todo.com">developer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>
  <depend>torch</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>